# MNIST

./: .gitignore  .pre-commit-config.yaml  Corrupt.py  LICENSE  cloudbuild.yaml  main.py  model.pth  pyproject.toml  reproducibility_tester.py  requirements.txt  requirements_dev.txt  tasks.py  vertex_ai_train.yaml
.dvc/: config
.github/: dependabot.yaml  stage_model.yaml
.github/workflows/: codecheck.yaml  stage_model.yaml  tests.yaml
config/: config.yaml  sweep.yaml
config/experiment/: exp1.yaml  exp2.yaml
config/model/: vae.yaml
config/optimizer/: adam.yaml
config/training/: default.yaml
dockerfiles/: evaluate.dockerfile  train.Dockerfile  wandb.docker
dummy/: cloudbuild.yaml  dummy.dockerfile
mnist/: README.md  tasks.py
mnist/models/: model.pth
mnist/src/mnist/: evaluate.py  train.py  visualize.py
scripts/: promote_model.py
src/mnist/: __init__.py  data.py  evaluate.py  model.py  train.py  vae_mnist.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
tests/performancetests/: test_model.py
