[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist"
version = "0.0.1"
description = "mnist"
authors = [
  { name = "kouropalatis", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

# --- Ruff Configuration ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Added F (Pyflakes) for error detection and I (Isort) for import sorting
select = ["I", "N", "E", "W", "F"]
# Ignore N806 to allow uppercase variables inside functions like DEVICE
ignore = ["N806"]

[tool.ruff.lint.isort]
# Ensure ruff recognizes 'mnist' and 'tests' as local modules
known-first-party = ["mnist", "tests"]

# --- Mypy Configuration ---
[tool.mypy]
python_version = "3.12"
# Crucial for MLOps projects with complex dependencies
ignore_missing_imports = true
check_untyped_defs = true
# Ensures mypy looks into your src directory correctly
mypy_path = "src"

[[tool.mypy.overrides]]
# Disable strict checking for libraries with complex typing
module = ["torch.*", "wandb.*", "sklearn.*", "matplotlib.*"]
ignore_errors = true

# --- Coverage Configuration ---
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]