[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist"
version = "0.0.1"
description = "MNIST classification project with MLOps best practices"
authors = [
  { name = "kouropalatis", email = "lykostratisk@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.21.1",
    "wandb>=0.24.0",
]




# --- Mypy Configuration ---
[tool.mypy]
python_version = "3.12"
# Crucial for MLOps projects with complex dependencies
ignore_missing_imports = true
check_untyped_defs = true
# Ensures mypy looks into your src directory correctly
mypy_path = "src"

[[tool.mypy.overrides]]
# Disable strict checking for libraries with complex typing
module = ["torch.*", "wandb.*", "sklearn.*", "matplotlib.*"]
ignore_errors = true

# --- Coverage Configuration ---
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "invoke>=2.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.1",
    "mkdocstrings-python>=1.16.10",
    "pre-commit>=4.1.0",
    "pytest>=9.0.2",
]
